# TraceNet

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  requirements.txt
data/: .gitkeep  README.md  arg_dag.txt  arg_sequences.fasta  card_data.tar.bz2  card_variants.tar.bz2  hgt_graph.txt  hospital_subgraph.txt
data/card_fasta/: CARD-Download-README.txt  PMID.tsv  aro_categories.tsv  aro_categories_index.tsv  aro_index.tsv  card.json  nucleotide_fasta_protein_homolog_model.fasta  nucleotide_fasta_protein_knockout_model.fasta  nucleotide_fasta_protein_overexpression_model.fasta  nucleotide_fasta_protein_variant_model.fasta  nucleotide_fasta_rRNA_gene_variant_model.fasta  protein_fasta_protein_homolog_model.fasta  protein_fasta_protein_knockout_model.fasta  protein_fasta_protein_overexpression_model.fasta  shortname_antibiotics.tsv  snps.txt  (+2 more)
docs/: README.md  TraceNet_Project_Specification.md  dataset_reference.md  frontend-design.md  implementation_guide.md  tracenet_comprehensive_project_documentation.md
experiments/: README.md  run_experiments.sh
frontend/: README.md  graph.js  index.html  main.js  style.css
nextjs-frontend/: package-lock.json  package.json  tailwind.config.ts
preprocessing/: README.md  build_arg_dag.py  build_graph.py  convert_to_json.py  download_fasta.py  validate_graph.py
reports/: README.md
scripts/: README.md  run.sh
src/: README.md  bfs.cpp  bfs.h  bnb_contain.cpp  bnb_contain.h  boyer_moore.cpp  boyer_moore.h  dfs.cpp  dfs.h  dijkstra.cpp  dijkstra.h  floyd_warshall.cpp  floyd_warshall.h  graph.cpp  graph.h  greedy_contain.cpp  greedy_contain.h  main.cpp  scc_kosaraju.cpp  scc_kosaraju.h  topo_sort.cpp  topo_sort.h  utils.cpp  utils.h
tests/: README.md  test_cpp.cpp  test_graph.py
visuals/: README.md
(+76 files in other folders)
